# simd-sketch

./: .gitignore  Cargo.toml  README.md  justfile  readme.md
examples/: dist.rs  random.rs
py/: correlation.py  stats  stats.py
src/: intrinsics.rs  lib.rs  main.rs
