[package]
name = "simd-sketch"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/ragnargrootkoerkamp/simd-sketch"
keywords = ["sketch", 'minhash', "simd", "dna", "bioinformatics"]
categories = ["compression", "data-structures", "science::bioinformatics"]
authors = ["Ragnar Groot Koerkamp"]
description = "A SIMD-accelerated library to compute a b-bit bottom-h sketch"

[profile.release]
lto = "thin"
incremental = true
debug = false

[dependencies]
itertools = "0.14.0"
packed-seq = "1.0.2"
simd-minimizers = "1.0.0"
tracing = { version = "0.1.41", features = ["log"] }
wide = "0.7.32"

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
needletail = "0.6.3"
flate2 = {version = "*", features = ["zlib-rs"]}
rand = "0.9.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
