[package]
name = "simd-sketch"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/ragnargrootkoerkamp/simd-sketch"
keywords = ["sketch", 'minhash', "simd", "dna", "bioinformatics"]
categories = ["compression", "data-structures", "science::bioinformatics"]
authors = ["Ragnar Groot Koerkamp"]
description = "A SIMD-accelerated library to compute a b-bit bottom-h sketch"

[profile.release]
lto = "thin"
incremental = true
debug = false

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
itertools = "0.14.0"
packed-seq = "1.0.2"
simd-minimizers = "1.0.0"
wide = "0.7.32"
needletail = "0.6.3"
flate2 = {version = "*", features = ["zlib-rs"]}
rayon = "1.10.0"
log = "0.4.27"
env_logger = "0.11.8"
indicatif = { version = "0.17.11", features = ["rayon"] }

[dev-dependencies]
rand = "0.9.0"
